--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QH'
 - !lcsh 'Vertebrates'
+- GITenberg
 title: The Origin of Vertebrates
 url: http://www.gutenberg.org/ebooks/44000
